--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SAMVAAD - An AI Chat Bot</title>
+    <title>Samvaad - An AI Chatbot</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
 <div class="ai-chat-box">
     <img src="ai.png" alt="" id="aiImage" width="10%">
     <div class="ai-chat-area">
-   Hello !  Welcome To Samvaad ! How Can I Help you Today?
+   Hello ! Welcome to Samvaad ! How Can I Help you Today?
     </div>
    
 </div>
